<resources>
    <string name="app_name">Insta Dicoding</string>
    <string name="welcome_title">Welcome to Insta Dicoding,</string>
    <string name="welcome_subtitle"> Where every post is a snapshot of your lifes journey. Share your stories, passions, and adventures. Lets get started!</string>
    <string name="label_login">Login</string>
    <string name="label_sign_up">Register</string>
    <string name="don_t_have_account">Don\'t have any account?</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_username">Username</string>
    <string name="dicoding">Dicoding</string>
    <string name="insta">Insta</string>
    <string name="action_map">action_map</string>
    <string name="action_logout">action_logout</string>
    <string name="story_photos">Story photos</string>
    <string name="password_validation">"Passwords must be at least 8 characters long. "</string>
    <string name="add_story">Create a Post</string>
    <string name="create">Create</string>
    <string name="detail_story">Detail Story</string>
    <string name="gallery">Gallery</string>
    <string name="write_post_desription_here">Write desription here!</string>
    <string name="upload_story">Upload</string>
    <string name="please_select_an_image">Please select an image</string>
    <string name="login_success">Login Success</string>
    <string name="register_success">Register Success</string>
    <string name="error_msg">Timeout</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="location">Location</string>
    <string name="try_again">Try Again</string>
</resources>