<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.OnBoardActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/dark_blue"
        app:srcCompat="@drawable/bg_dicoding"
        android:importantForAccessibility="no" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="24dp">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:textAlignment="center"
            android:alpha="0"
            tools:alpha="1"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/quicksand_medium"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0"
            tools:alpha="1"
            android:paddingHorizontal="16dp"
            android:text="@string/welcome_subtitle"
            android:textAlignment="center"
            android:fontFamily="@font/quicksand_medium"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_title" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:alpha="1"
            android:src="@drawable/insta_dicoding"
            app:layout_constraintBottom_toTopOf="@id/btn_login_welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_subtitle"
            android:importantForAccessibility="no" />

        <Button
            android:id="@+id/btn_login_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:alpha="0"
            tools:alpha="1"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/label_login"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/dont_have_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/dont_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:alpha="0"
            tools:alpha="1"
            android:fontFamily="@font/quicksand_medium"
            app:layout_constraintBottom_toTopOf="@+id/materialButtonSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/materialButtonSignUp"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_sign_up"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:alpha="0"
            tools:alpha="1"
            android:textStyle="bold"
            android:fontFamily="@font/quicksand_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>